# tract-sgx-xargo

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: broadcast.rs  framework.rs
core/src/ops/: matmul.rs
core/src/ops/array/: dyn_slice.rs  gather.rs
data/: Cargo.toml
data/src/dim/: mod.rs  tree.rs
examples/onnx-gpt-neo/: Cargo.toml
examples/onnx-gpt-neo/src/: main.rs
hir/src/infer/: fact.rs
hir/src/ops/: expandable.rs  source.rs
hir/src/ops/array/: strided_slice.rs
linalg/: Cargo.toml  build.rs
nnef/: Cargo.toml
nnef/src/: framework.rs
nnef/src/ast/: quant.rs
onnx/: Cargo.toml
onnx/protos/onnx/: onnx-operators.proto3  onnx.proto  onnx.proto3
onnx/src/: lib.rs  model.rs  tensor.rs
onnx/src/ops/: logic.rs  multinomial.rs  resize.rs
onnx/src/ops/array/: mod.rs  nonzero.rs  range.rs
