[workspace]
members = [
    "data",
    "linalg",
    "core",
    "hir",
    "nnef",
    "onnx-opl",
    "onnx",
]

[profile.opt-no-lto]
inherits="release"
lto=false

[profile.release]
lto = true

[profile.bench]
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.darling_macro]
opt-level = 0 # work around never ending build on wondows

[profile.dev.build-override]
debug = false
# strip = "debuginfo" does not work on android and ios
incremental = false

[patch.crates-io]
tar = { git = "https://github.com/mithril-security/tar-rs-sgx.git", tag = "0.4.33x"}
anyhow = { git = 'ssh://git@github.com/mithril-security/anyhow-xargo-sgx.git', tag = "1.0.45-sgx" }