[workspace]
members = [
    "data",
    "linalg",
    "core",
    "hir",
    "nnef",
    "onnx-opl",
    "onnx",
]

[patch.crates-io]
tar = { git = "https://github.com/mithril-security/tar-rs-sgx.git", tag = "0.4.33x"}
anyhow = { git = 'ssh://git@github.com/mithril-security/anyhow-xargo-sgx.git', tag = "1.0.45-sgx" }
