[package]
name = "tract-nnef"
version = "0.18.3-pre"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "NeuralNetworks", "NNEF" ]
categories = [ "science" ]
autobenches = false
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
byteorder = "1.4.3"
log = "0.4.14"
nom = "7.0.0"
tar = "=0.4.38"
flate2 = { version = "1.0.20", optional = true }
tract-core = { path = "../core" }


[target.'cfg(not(target_env = "sgx"))'.dependencies]
walkdir = { version = "2.3.2", optional = true }

[target.'cfg(target_env = "sgx")'.dependencies]
walkdir = { version = "2.3.2" }

[features]
default = ["flate2"]
untrusted_fs = ["tract-core/untrusted_fs", "walkdir"]
